--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,32 @@
+version: '3.8'
+
 services:
   db:
     image: mysql:8.0
-    container_name: mysql_container
     environment:
-      MYSQL_ROOT_PASSWORD: Chetu@8431
       MYSQL_DATABASE: portfolio_db
-      MYSQL_PASSWORD: Chetu@8431
+      MYSQL_USER: portfolio_user
+      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: rootpassword
     ports:
-      - "3308:3306"  # Changed to 3307 (avoid clash on 3306)
+      - "3306:3306"
     volumes:
-      - mysql_data:/var/lib/mysql
+      - db_data:/var/lib/mysql
 
   web:
     build: .
-    container_name: django_container
-    command: python manage.py runserver 0.0.0.0:8000
+    command: bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/app
     ports:
-      - "8000:8000"  # This is correct
+      - "8000:8000"
+    environment:
+      - DB_HOST=db
+      - DB_NAME=portfolio_db
+      - DB_USER=portfolio_user
+      - DB_PASSWORD=password
     depends_on:
       - db
 
 volumes:
-  mysql_data:
+  db_data:
